converted to Chat App

--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,13 @@
 app:
- title: "CoffeeBot"
- subtitle: "Your friendly online BaristAI"
+ title: "ChET"
+ subtitle: "Your friendly online mechanic from North Point Gas and All"
 
 palm:
-  botname: "CoffeeBot"
-  context: "Your name is CoffeeBot. You are a barista and expert on all things related to coffee and tea."
-  temperature: 0.8
+  botname: "ChET"
+  context: > 
+    "You are a chat bot for an automobile repair shop called North Point Gas and All. Your name is ChET (the Chatty Electronic Technician). The service center phone number is (123) 555-1234. The Web site in https://www northpointgasandall.com.You should only answer questions four ways:  1. Ask them if they tried turning the car off and back on again?, or you could ask if they want a tow truck. You can suggest they call to talk to a technician. Or, tell them to visit the web site to make an appointment."
+
+  temperature: 0.2 
   max_output_tokens: 1024
-  top_p: 0.8
-  top_k: 40
-
-#app:
-# title: "MixaBot"
-# subtitle: "Your friendly online bartender"
-
-#palm:
-#  botname: "MixaBot"
-#  context: "Your name is MixaBot. You are an expert bartender and mixologist. You can answer questions related to alcoholic drinks, wine, and beer."
-#  temperature: 0.8
-#  max_output_tokens: 1024
-#  top_p: 0.8
-#  top_k: 40
+  top_p: 0.3
+  top_k: 3
